<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="463dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/linkal"
        android:src="@drawable/logo_linkal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="244dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/logIn"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="O"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:paddingBottom="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="244dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/secondary" />


</LinearLayout>